Multiple warnings accessing brush data. current value '0' matches no enum in 'Brush' #83090

Closed
opened 2020-11-27 06:37:58 +01:00 by Jeremy Folland · 8 comments

System Information
Operating system: Windows 10
Graphics card: Radeon RX 580

Blender Version
Broken: 2.79, 2.91.0
Worked: I don't have any older versions than 2.79 installed.

Short description of error

Most of the brushes show a warning if you attempt to access either their direction or gpencil_weight_tool attributes.

'WARN (bpy.rna): C:\b\buildbot-worker-windows\windows_lts_283\blender.git\source\blender\python\intern\bpy_rna.c:1479 pyrna_enum_to_py: current value '0' matches no enum in 'Brush', 'Add', 'direction''

I've attached a text file containing all the warnings I've been able to pinpoint in brushes.
Blender - All the brush Warnings.txt

Exact steps for others to reproduce the error
Open scripting window and type:

D.brushes['Add'].direction
**System Information** Operating system: Windows 10 Graphics card: Radeon RX 580 **Blender Version** Broken: 2.79, 2.91.0 Worked: I don't have any older versions than 2.79 installed. **Short description of error** Most of the brushes show a warning if you attempt to access either their direction or gpencil_weight_tool attributes. ``` 'WARN (bpy.rna): C:\b\buildbot-worker-windows\windows_lts_283\blender.git\source\blender\python\intern\bpy_rna.c:1479 pyrna_enum_to_py: current value '0' matches no enum in 'Brush', 'Add', 'direction'' ``` I've attached a text file containing all the warnings I've been able to pinpoint in brushes. [Blender - All the brush Warnings.txt](https://archive.blender.org/developer/F9386809/Blender_-_All_the_brush_Warnings.txt) **Exact steps for others to reproduce the error** Open scripting window and type: ``` D.brushes['Add'].direction ```
Author

Added subscriber: @JeremyFolland

Added subscriber: @JeremyFolland

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report, I can confirm.

I don't know if an empty enum list should be allowed on the RNA.
But if not, this would solve the problem:

diff --git a/source/blender/makesrna/intern/rna_brush.c b/source/blender/makesrna/intern/rna_brush.c
index 736edc61d74..b85c39c51ca 100644
--- a/source/blender/makesrna/intern/rna_brush.c
+++ b/source/blender/makesrna/intern/rna_brush.c
@@ -787,6 +787,7 @@ static const EnumPropertyItem *rna_Brush_direction_itemf(bContext *C,
   ePaintMode mode = BKE_paintmode_get_active_from_context(C);
 
   static const EnumPropertyItem prop_default_items[] = {
+      {0, "NONE", 0, NULL, NULL},
       {0, NULL, 0, NULL, NULL},
   };
 

Thanks for the report, I can confirm. I don't know if an empty enum list should be allowed on the RNA. But if not, this would solve the problem: ``` diff --git a/source/blender/makesrna/intern/rna_brush.c b/source/blender/makesrna/intern/rna_brush.c index 736edc61d74..b85c39c51ca 100644 --- a/source/blender/makesrna/intern/rna_brush.c +++ b/source/blender/makesrna/intern/rna_brush.c @@ -787,6 +787,7 @@ static const EnumPropertyItem *rna_Brush_direction_itemf(bContext *C, ePaintMode mode = BKE_paintmode_get_active_from_context(C); static const EnumPropertyItem prop_default_items[] = { + {0, "NONE", 0, NULL, NULL}, {0, NULL, 0, NULL, NULL}, }; ```

Added subscriber: @mont29

Added subscriber: @mont29

We already have generic DummyRNA_DEFAULT_items...

We already have generic `DummyRNA_DEFAULT_items`...

This issue was referenced by 2afc508eb4

This issue was referenced by 2afc508eb4bd1fb325ce726eed62ed1d82b25833

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-12-02 09:30:49 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83090
No description provided.