Fix T83090: Multiple warnings accessing brush enum data.

We already have generic enums for empty and default 'none' value.