source/blender/makesrna/intern/rna_brush.c
@@ -786,10 +786,6 @@ static const EnumPropertyItem *rna_Brush_direction_itemf(bContext *C,
 {
   ePaintMode mode = BKE_paintmode_get_active_from_context(C);
 
-  static const EnumPropertyItem prop_default_items[] = {
-      {0, NULL, 0, NULL, NULL},
-  };
-
   /* sculpt mode */
   static const EnumPropertyItem prop_flatten_contrast_items[] = {
       {BRUSH_DIR_IN, "CONTRAST", ICON_ADD, "Contrast", "Subtract effect of brush"},
@@ -849,10 +845,10 @@ static const EnumPropertyItem *rna_Brush_direction_itemf(bContext *C,
               return prop_direction_items;
 
             case BRUSH_MASK_SMOOTH:
-              return prop_default_items;
+              return DummyRNA_DEFAULT_items;
 
             default:
-              return prop_default_items;
+              return DummyRNA_DEFAULT_items;
           }
 
         case SCULPT_TOOL_FLATTEN:
@@ -871,7 +867,7 @@ static const EnumPropertyItem *rna_Brush_direction_itemf(bContext *C,
           return prop_inflate_deflate_items;
 
         default:
-          return prop_default_items;
+          return DummyRNA_DEFAULT_items;
       }
 
     case PAINT_MODE_TEXTURE_2D:
@@ -881,11 +877,11 @@ static const EnumPropertyItem *rna_Brush_direction_itemf(bContext *C,
           return prop_soften_sharpen_items;
 
         default:
-          return prop_default_items;
+          return DummyRNA_DEFAULT_items;
       }
 
     default:
-      return prop_default_items;
+      return DummyRNA_DEFAULT_items;
   }
 }
 
